--- a/Gunplay/MainWindow.xaml
+++ b/Gunplay/MainWindow.xaml
@@ -9,7 +9,7 @@
         WindowState="Maximized">
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="/main.gif"/>
+            <ImageBrush ImageSource="Images/main.gif"/>
         </Grid.Background>
         <Label Content="Перестрелка" HorizontalAlignment="Center" Margin="0,9,0,0" VerticalAlignment="Top" FontSize="72" FontFamily="Bahnschrift SemiBold Condensed"/>
         <Button Content="Играть" HorizontalAlignment="Center" Margin="0,0,0,124" VerticalAlignment="Center" Height="51" Width="314" Click="PlayButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFFBB83A"/>
