--- a/Gunplay/View/StartPage.xaml
+++ b/Gunplay/View/StartPage.xaml
@@ -105,7 +105,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
@@ -116,6 +116,25 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
+
+                <Image x:Name="rightShell" Grid.Row="3" Grid.Column="2" Source="/View/Images/basicShell.png" />
+                <Label x:Name="labelRightShell" Grid.Row="3" Grid.Column="2" Margin="0 0 0 -25" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="32" Content="Обычный" Style="{StaticResource label}" />
+                <Button Grid.Row="3" Grid.Column="3" x:Name="addTypeRightButton" Style="{StaticResource triangleButton}" Click="AddTypeRightButton_Click" >
+                    <Polygon Points="0, 40, 0, 0, 40, 20" Stroke="Black" StrokeThickness="5" Height="auto" Width="auto">
+                        <Polygon.Fill>
+                            <SolidColorBrush Color="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Tag}"/>
+                        </Polygon.Fill>
+                    </Polygon>
+                </Button>
+                <Button Grid.Row="3" Grid.Column="1" x:Name="removeTypeRightButton" Style="{StaticResource triangleButton}" Click="RemoveTypeRightButton_Click" Margin="20,0,0,0">
+                    <Polygon Points="40, 0, 40, 40, 0, 20" Stroke="Black" StrokeThickness="5" Height="auto" Width="auto">
+                        <Polygon.Fill>
+                            <SolidColorBrush Color="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Tag}"/>
+                        </Polygon.Fill>
+                    </Polygon>
+                </Button>
+
+
 
                 <Label Grid.Row="0" Grid.Column="0" Content="Количество очков:" Style="{StaticResource label}"/>
                 <Label Grid.Row="1" Grid.Column="0" Content="Бронебойность:" Style="{StaticResource label}"/>
