--- a/Gunplay/View/SettingsPage.xaml
+++ b/Gunplay/View/SettingsPage.xaml
@@ -5,25 +5,25 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Gunplay.View"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="600"
+      d:DesignHeight="400" d:DesignWidth="650"
       Title="SettingsPage">
 
-    <Grid Background="#FFF3A845" Margin="0,0,0,46">
+    <Border BorderBrush="Black" BorderThickness="10">
 
-        <Label Content="Звуки" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="42" FontFamily="Bahnschrift SemiBold Condensed"/>
-        <Label Content="Музыка" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" FontSize="42" FontFamily="Bahnschrift SemiBold Condensed"/>
+        <Grid Background="#FFF3A845" Margin="0,0,0,0">
+            <Label Content="Музыка:" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" FontSize="42" FontFamily="Bahnschrift SemiBold Condensed"/>
 
-        <Button x:Name="cancelButton" Content="Отмена" HorizontalAlignment="Left" Margin="10,293,0,0" VerticalAlignment="Top" Height="51" Width="151" Click="CancelButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D"/>
-        <Button x:Name="saveButton" Content="Сохранить" HorizontalAlignment="Left" Margin="439,293,0,0" VerticalAlignment="Top" Height="51" Width="151" Click="SaveButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D"/>
-
-        <Slider HorizontalAlignment="Left" Margin="143,31,0,0" VerticalAlignment="Top" Width="435"/>
-        <Slider HorizontalAlignment="Left" Margin="143,85,0,0" VerticalAlignment="Top" Width="435"/>
-        <Label Content="Частота Кадров" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" FontSize="42" FontFamily="Bahnschrift SemiBold Condensed"/>
-        <StackPanel x:Name="stackPanel" Margin="250,-45,0,0" Orientation="Horizontal" Height="30" VerticalAlignment="Center">
-            <RadioButton BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="Auto" IsChecked="True" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed" Margin="0, 0, 0, 0" RenderTransformOrigin="0.5,0.5"/>
-            <RadioButton BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="60" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed"  Margin="25, 0, 0, 0" />
-            <RadioButton BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="90" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed"  Margin="25, 0, 0, 0"/>
-            <RadioButton BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="144" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed"  Margin="25, 0, 0, 0"/>
-        </StackPanel>
-    </Grid>
+            <Button x:Name="cancelButton" Content="Назад" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Height="51" Width="151" Click="CancelButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D"/>
+            <Button x:Name="saveButton" Content="Сохранить" HorizontalAlignment="Right" Margin="20,20,20,20" VerticalAlignment="Bottom" Height="51" Width="151" Click="SaveButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D"/>
+            
+            <Slider x:Name="musicSlider" HorizontalAlignment="Left" Margin="250,42,0,0" VerticalAlignment="Top" Width="300"
+                    Minimum="0" Maximum="1" ValueChanged="VolumeSlider_ValueChanged"/>
+            <Label Content="Частота Кадров:" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" FontSize="42" FontFamily="Bahnschrift SemiBold Condensed"/>
+            <StackPanel x:Name="stackPanel" Margin="250,-70,0,0" Orientation="Horizontal" Height="30" VerticalAlignment="Center">
+                <RadioButton x:Name="fpsAuto" BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="Auto" IsChecked="True" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed" Margin="0, 0, 0, 0" RenderTransformOrigin="0.5,0.5"/>
+                <RadioButton x:Name="fps90" BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="90" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed"  Margin="25, 0, 0, 0"/>
+                <RadioButton x:Name="fps144" BorderThickness="9" BorderBrush="#FFC95F01" GroupName="FPS" Content="144" FontSize="30" FontFamily="Bahnschrift SemiBold Condensed"  Margin="25, 0, 0, 0"/>
+            </StackPanel>
+        </Grid>
+    </Border>
 </Page>
