--- a/Gunplay/App.xaml
+++ b/Gunplay/App.xaml
@@ -29,6 +29,36 @@
             </Style.Triggers>
         </Style>
 
+        <Style x:Key="BasicButton" TargetType="Button">
+            <Setter Property="Margin" Value="20 20 20 20"/>
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Width" Value="300"/>
+            <Setter Property="Background" Value="#FFFBB83A"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Padding" Value="500"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="15"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="FontSize" Value="36"/>
+            <Setter Property="FontFamily" Value="Bahnschrift SemiBold Condensed"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="15">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Black"/>
+                    <Setter Property="Foreground" Value="#FFC05420"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="label" TargetType="Label">
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
