--- a/Gunplay/View/StartPage.xaml
+++ b/Gunplay/View/StartPage.xaml
@@ -5,17 +5,17 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Gunplay.View"
       mc:Ignorable="d" 
-      Width="1920" Height="1080"
-      Title="StartPage" >
+      d:DesignHeight="1080" d:DesignWidth="1920"
+      Title="Перестрелка - Начальная страница" >
 
-    <Grid Background="#FFF3A845" Margin="0,0,0,0" Height="auto" Width="auto">
-        <Button Panel.ZIndex="3" x:Name="startButton" Content="Начать" BorderThickness="5" HorizontalAlignment="Center" VerticalAlignment="Center" Height="51" Width="152" Click="StartButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D" BorderBrush="Black"/>
-        <Rectangle HorizontalAlignment="Center" Height="1400" Stroke="Black" VerticalAlignment="Center" Width="4" Fill="Black"/>
-
-        <Grid >
+    <Grid Background="#FFF3A845" Width="1550">
+        <Button Panel.ZIndex="4" x:Name="startButton" Content="Начать" VerticalAlignment="Bottom" Margin="0 300" Height="100" Width="200" Style="{StaticResource BasicButton}" Click="StartButton_Click" />
+        <Rectangle HorizontalAlignment="Center" Height="1080" Stroke="Black" VerticalAlignment="Center" Width="4" Fill="Black"/>
+        <Grid Margin="20 20 20 20">
+            <Grid >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="540*"/>
-                <ColumnDefinition Width="540*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -28,14 +28,14 @@
                    BorderBrush="Black" BorderThickness="5" Background="#FFECA446"/>
             
             
-            <Grid Grid.Row="1" Margin="20,20,20,20" Grid.Column="0">
+            <Grid Grid.Row="1" Margin="0,0,0,0" Grid.Column="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+                    </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -87,7 +87,7 @@
                     </Polygon>
                 </Button>
                 
-                <Button Grid.Row="4" x:Name="cancelButton" Content="Назад" BorderThickness="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="50" Width="152" Click="CancelButton_Click" FontSize="36" FontFamily="Bahnschrift SemiBold Condensed" Background="#FFEEB13D" BorderBrush="Black" Margin="20,0,0,20"/>
+                <Button Grid.Row="4" x:Name="cancelButton" Content="Назад" Style="{StaticResource BasicButton}" VerticalAlignment="Bottom" Click="CancelButton_Click"/>
                 <Button Grid.Row="3" Grid.Column="3" x:Name="addTypeLeftButton" Style="{StaticResource triangleButton}" Click="AddTypeLeftButton_Click" >
                     <Polygon Points="0, 40, 0, 0, 40, 20" Stroke="Black" StrokeThickness="5" Height="auto" Width="auto">
                         <Polygon.Fill>
@@ -180,7 +180,7 @@
                     </Polygon>
                 </Button>
             </Grid>
-            
+            </Grid>
         </Grid>
     </Grid>
 </Page>
